--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -145,7 +145,9 @@
         Some text will show up, once you toggle
     </string>
     <string name="suggestion_trees">We\'d need to plant %s trees to offset that amount of carbon</string>
-    <string name="suggestion_all_vancouver">If everyone in Vancouver also saved %s, the total would be %s</string>
+    <string name="suggestion_all_vancouver">
+        If everyone in Vancouver also saved %s, the total CO2e saved would be %s
+    </string>
 
     <string name="all_vancouver">
         If Everyone in Vancouver also made your change, then there would be:
