--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -129,15 +129,16 @@
     </string>
 
     <string name="low_carbon_result">
-        Good News! The greenhouse gas emissions required to produce your diet are very low!
+        Good News! The greenhouse gas emissions required to produce your diet (%s) are very low
+        compared to the average vancouver resident (%s)!
     </string>
     <string name="average_carbon_result">
-        The greenhouse gas emissions required to produce your diet are similar to the average
-        Vancouver resident.
+        The greenhouse gas emissions required to produce your diet (%s) are similar to the average
+        Vancouver resident (%s).
     </string>
     <string name="high_carbon_result">
-        The greenhouse gas emissions required to produce your diet are higher than the average
-        Vancouver resident.
+        The greenhouse gas emissions required to produce your diet (%s) are higher than the average
+        Vancouver resident (%s).
     </string>
 
     <string name="question_mark">\?</string>
