--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -268,7 +268,7 @@
     <string name="pledge_radio_button_3">A TON! (Literally)</string>
     <string name="pledge_radio_button_2">A Decent Amount</string>
     <string name="pledge_radio_button_1">A Little At A Time</string>
-    <string name="pledge_radio_button_0">Nothing. Bwahaha!</string>
+    <string name="pledge_radio_button_0">Nothing. Wahaha!</string>
     <string name="pledge_button_text">PLEDGE!</string>
     <string name="make_pledge_button_text">MAKE A PLEDGE!</string>
     <string name="pledge_share">PLEDGE AND SHARE!</string>
